test/fail/let_reassign.zn
# ERRORS: 1
func main() {
  let x = 10
  x = 20
  0
}
